test/scc_test/exp/semantic-errors/031.t
void test()
{
    struct A {int x;};
    (struct A)0;
}